Revert "Fixed page jump when clicking on nav bar when partially scrolled."

--- a/style/main.css
+++ b/style/main.css
@@ -283,10 +283,6 @@ a.social-media-image {
 	padding:10px;
 }
 
-.secondary-page {
-	display: none;
-}
-
 @media (max-width: 800px) {
     .social-media {
         visibility: hidden;
